# neptune

./: .cursorignore  .gitignore  CMakeLists.txt  pyproject.toml
docs/: Doxyfile
include/tvm/arith/: int_set.h  iter_affine_map.h
include/tvm/ir/: expr.h
include/tvm/meta_schedule/: arg_info.h  space_generator.h
include/tvm/node/: repr_printer.h
include/tvm/runtime/: thread_storage_scope.h
include/tvm/support/: iterator.h
include/tvm/tir/: analysis.h  block_scope.h  builtin.h  expr.h  expr_functor.h  sexpr_printer.h  stmt.h  stmt_functor.h  transform.h  var.h
python/tvm/_ffi/: registry.py  runtime_ctypes.py
python/tvm/arith/: __init__.py  sympy_tools.py
python/tvm/exec/: popen_worker.py
python/tvm/ir/: expr.py  transform.py
python/tvm/meta_schedule/: arg_info.py  relax_integration.py
python/tvm/neptune/: build.py  sch_utils.py
python/tvm/relax/: struct_info.py
python/tvm/runtime/: __init__.py  cuda_rocm_utils.py  ndarray.py  triton.py
python/tvm/te/: operation.py
python/tvm/tir/: __init__.py  buffer.py  expr.py  op.py  stmt.py
scripts/: benchmark_amd.sh  benchmark_e2e.py  benchmark_e2e.sh  benchmark_mirage.sh  benchmark_nvidia.sh  generated.py  load_best.py  neptune_torch_utils.py  plot.py  plot_e2e.py  repeat_compile.py  run_mirage.py
scripts/neptune_bench/: __init__.py  __main__.py  operators.py  runner.py  utils.py
scripts/neptune_bench/flashinfer/: __init__.py  paged.py
scripts/neptune_bench/ours/: __init__.py  attn_fp8.py  attn_gqa.py  attn_plain.py  runner.py  softmax.py
scripts/neptune_bench/stats/: common.py  nsys.py  rocprof.py
scripts/neptune_bench/torch/: __init__.py  flex.py  sdpa.py
scripts/neptune_bench/tridao/: __init__.py
scripts/neptune_bench/triton/: __init__.py  openai.py  tri_dao.py
scripts/neptune_bench/tvm/: __init__.py  pipeline.py
src/arith/: int_set.cc  interval_set.h  iter_affine_map.cc  pattern_match.h  rewrite_simplify.cc
src/driver/: driver_api.cc
src/ir/: expr.cc
src/meta_schedule/: arg_info.cc  utils.h
src/meta_schedule/schedule_rule/: cross_thread_reduction.cc
src/meta_schedule/space_generator/: post_order_apply.cc  schedule_fn.cc  space_generator.cc  space_generator_union.cc
src/node/: repr_printer.cc
src/runtime/: thread_storage_scope.h
src/runtime/rocm/: rocm_module.cc
src/script/printer/: doc.cc  legacy_repr.cc
src/tir/analysis/: block_access_region_detector.cc  buffer_access_lca_detector.cc  stmt_finding.cc  var_use_def_analysis.cc  var_use_def_analysis.h
src/tir/ir/: block_scope.cc  expr.cc  expr_functor.cc  stmt.cc  stmt_functor.cc  tir_visitor_with_path.cc  tir_visitor_with_path.h
src/tir/op/: builtin.cc
src/tir/schedule/: analysis.h  concrete_schedule.cc  concrete_schedule.h  instruction_traits.h  primitive.h  schedule.cc  state.cc  trace.cc  traced_schedule.cc  traced_schedule.h  transform.cc  transform.h  utils.cc  utils.h
src/tir/transforms/: compact_buffer_region.cc  flatten_buffer.cc  ir_utils.cc  lower_opaque_block.cc  memhammer_coalesce.cc  plan_update_buffer_allocation_location.cc  simplify.cc  split_host_device.cc  (+3 more)
(+44 files in other folders)
